# bk_avdk

./: .gitmodules  Makefile  README.md  README_CN.md  build_all.sh  build_avdk.sh  build_doc.sh  sdk_version.txt
components/: sdk_version.txt
components/audio_algorithm/agc/: CMakeLists.txt  Kconfig  agc_demo.c
components/audio_algorithm/aud_ns/: Kconfig  aud_ns_demo.c
components/audio_algorithm/aud_vad/: Kconfig  aud_vad_demo.c
components/audio_algorithm/rsp/: aud_rsp_demo.c
components/audio_algorithm/wanson_asr/: CMakeLists.txt  Kconfig  asr_demo.c
components/audio_codec/aac_decode/: CMakeLists.txt  Kconfig  aacdec_demo.c
components/audio_codec/es8311/: es8311_demo.c
components/audio_codec/flac/: Kconfig  flac_dec_demo.c  flac_enc_demo.c
components/audio_codec/g711/: g711_demo.c
components/audio_codec/mp3/: CMakeLists.txt  Kconfig  mp3_demo.c
components/audio_codec/opus/: Kconfig  opus_demo.c
components/audio_codec/sbc_decode/: sbc_decode_demo.c
components/avdk_libs/: CMakeLists.txt
components/bk_audio/audio_pipeline/: CMakeLists.txt  Kconfig  audio_coprocess.c  audio_element.c  audio_event_iface.c  audio_mailbox.c  audio_mem.c  audio_pipeline.c  ringbuf.c
components/bk_draw_blend/: CMakeLists.txt  Kconfig  draw_blend.c  draw_blend.h  string.c
components/bk_peripheral/: CMakeLists.txt  Kconfig
components/bk_peripheral/include/: bk_peripheral.h  dvp_sensor_devices.h  lcd_panel_devices.h  tp_sensor_devices.h
components/bk_peripheral/src/: bk_peripheral.c
components/bk_thirdparty/aac_decoder/: CMakeLists.txt
components/bk_thirdparty/aac_decoder/include/: aac_decoder.h  bk_aac_decoder.h
components/bk_thirdparty/aac_decoder/src/: bk_aac_decoder.c
components/bk_thirdparty/asr/wanson/: CMakeLists.txt  Kconfig
components/bk_thirdparty/asr/wanson/bk7256/nds32le-elf-mculib-v5/: fst_words.h
components/bk_thirdparty/asr/wanson/bk7256/nds32le-elf-mculib-v5f/: fst_graph.h
components/bk_thirdparty/asr/wanson/include/: asr.h
components/bk_thirdparty/cs2p2p/: CMakeLists.txt  Kconfig  cs2_osal.c  cs2_osal.h
components/bk_thirdparty/jpeg_encoder/: CMakeLists.txt  Kconfig
components/bk_thirdparty/jpeg_encoder/include/: time_consumption.h
components/bk_thirdparty/jpeg_encoder/src/: jpeg_sw_enc_test.c  time_consumption.c
components/cli_test/: CMakeLists.txt  Kconfig  bk_at_video.c  dvp_test.c  idf_test.c  video_at_command.c
components/codec/image_convert/: CMakeLists.txt  Kconfig  image_convert.c  image_convert.h
components/display_service/: CMakeLists.txt  Kconfig
components/display_service/include/: display_service.h  lcd_draw_blend.h  lcd_qspi_display_service.h  lcd_spi_display_service.h
components/display_service/src/: lcd_display_service.c  lcd_draw_blend.c  lcd_qspi_display_service.c  lcd_spi_display_service.c
components/face_detection/: CMakeLists.txt  facedetectcnn-data.c  facedetectcnn-model.c  facedetectcnn.c
components/face_detection/include/: facedetectcnn.h  facedetection_export.h
components/lvgl/: CMakeLists.txt  Kconfig  lv_conf.h  lv_fatfs.h  lv_vendor.c  lv_vendor.h
components/lvgl/hal/: lv_fatfs.c  lv_fs_bk_posix.c
components/lvgl/port/: lv_port_disp.c  lv_port_disp.h  lv_port_disp_bk7256.c  lv_port_indev.c
components/lvgl/src/: lv_conf_internal.h
components/media/: CMakeLists.txt  Kconfig
components/media/app/: media_app.c
components/media/aud/: adc_ccb.c  dac_ccb.c
components/media/camera/: camera_act.c  dvp.c  uvc.c
components/media/cli/: media_cli.c
components/media/comm/: frame_buffer.c
components/media/core/: media_major.c  media_minor.c
components/media/include/: camera_act.h  frame_buffer.h  lcd_act.h  lcd_blend.h  lcd_decode.h  lcd_rotate.h  media_app.h  media_core.h  media_evt.h
components/media/lcd/: lcd_act.c  lcd_blend.c  lcd_calc.c  lcd_decode.c  lcd_rotate.c  lvgl_draw.c
components/media/mb/: mailbox_act.c  mailbox_queue.c
components/media/storage/: storage_act.c
components/media/transfer/: transfer_act.c
components/media_service/: CMakeLists.txt
components/media_unit_test/: CMakeLists.txt  Kconfig
components/media_utils/: CMakeLists.txt  Kconfig
components/multimedia/: CMakeLists.txt  Kconfig
components/multimedia/camera/: uvc.c  (+3 more)
components/wifi_transfer/: CMakeLists.txt  Kconfig  wifi_transfer.c  wifi_transfer.h
docs/: version.json
docs/bk7258/: Doxyfile  conf_common.py  docs_common.mk  gen-dxd.py  latex_format.py
projects/bluetooth/: bluetooth.rst
projects/lvgl/: lvgl.rst
projects/media/: media.rst
tools/: Makefile  README.md  README_CN.md  armino_doc.py  build.sh  build_all.sh  build_avdk.sh  build_doc.sh
(+1016 files in other folders)
